--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
-test<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Pages</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Object As Organism</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/main.css" />
+    
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages Project</h1>
-    <p>This is a simple GitHub Pages site!</p>
+    <div class="img1">
+        <div class="txt">
+             <span class="border trans">
+                Object as Organism
+            </span>
+        </div>
+    </div>
+    <section class="section sec1">
+    <h2>Section1</h2>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, quas laboriosam dolorem ipsum hic pariatur illo neque! Dolores quibusdam odio placeat voluptatem, consequuntur vel modi voluptatum. Ad nihil dolorem earum.
+    </p>
+    <div class="binder-images">
+        <img src="images/Binder1_Page_1.png" alt="Binder1 Image 1">
+    </div>
+    </section>
+    <div class="img2">
+        <div class="txt">
+            <span class="border trans">
+                --Text--
+            </span>
+        </div>
+    </div>
+    <section class="section sec2">
+        <h2>Section2</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi sunt cupiditate laudantium, necessitatibus sapiente possimus! Nam amet error quasi veniam excepturi, quo animi ipsam assumenda laboriosam quas similique temporibus eveniet.
+        </p>
+    </section>
+    <div class="img3">
+        <div class="txt">
+             <span class="border trans">
+                --Text--
+            </span>
+        </div>
+    </div>
+    <div class="img1">
+        <div class="txt">
+             <span class="border trans">
+                --Text--
+            </span>
+        </div>
+    </div>
 </body>
 </html>
